Fix Compilation Issue